# ref-contracts

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: on-pr-merge.yml  on-pr-push.yml
contract/: Cargo.toml
contract/src/: lib.rs  pseudonyms.rs  result.rs
