[package]
name = "self_identify"
version = "1.0.0-alpha.12"
authors = ["nagara Developers <dev@nagara.network>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
ink = { version = "4.3.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
thiserror-no-std = "2.0.2"

[dev-dependencies]
ink_e2e = "4.3.0"

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std", "thiserror-no-std/std"]
ink-as-dependency = []
e2e-tests = []
